# LANLGeoMag

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  HACKING  LICENSE.md  Lgm.py  Lgm_CTrans.py  Lgm_DateAndTime.py  Lgm_LeapSeconds.py  Lgm_MagEphemInfo.py  Lgm_MagModelInfo.h  Lgm_MagModelInfo.py  Lgm_Magnitude.py  Lgm_Octree.py  Lgm_Sgp.py  Lgm_T89.py  Lgm_Types.py  Lgm_Vec.py  Lgm_Vector.py  Lgm_Wrap.py  Makefile  Makefile.am  Makefile.in  NEWS  OSX_README.txt  README  README.OSX  README.md  WRAP_GEN.csh  WRAP_GEN.txt  _Lgm.py  _Lgm_CTrans.py  _Lgm_DateAndTime.py  _Lgm_Eop.py  _Lgm_MagModelInfo.py  _Lgm_Octree.py  _Lgm_Quat.py  _Lgm_Sgp.py  (+24 more)
Python/: Closed_Field.py  LIN_Lgm_Wrap.py.bak  LanlGeoMagPython.komodoproject  Lgm.py  Lgm_CTrans.py  Lgm_Data.py  Lgm_DateAndTime.py  Lgm_Eop.py  Lgm_MagModelInfo.py  Lgm_OP77.py  Lgm_OlsenPfitzer.py  Lgm_Structures.py  Lgm_T89.py  Lgm_Types.py  Lgm_Vec.py  Lgm_Vector.py  Lstar.py  LstarVersusPA.py  MagData.py  Makefile.am  OSX_Lgm_Wrap.py.bak  SimpleTrace.py  _Lgm.py  _Lgm_CTrans.py  _Lgm_DateAndTime.py  _Lgm_Eop.py  _Lgm_MagModelInfo.py  _Lgm_Octree.py  _Lgm_Sgp.py  _Lgm_Types.py  __init__.py  make_Lgm_Wrap.py  setup.py  test_Closed_Field.py  test_Lgm.py  test_Lgm_CTrans.py  test_Lgm_Data.py  test_Lgm_DateAndTime.py  test_Lgm_MagModelInfo.py  test_Lgm_Octree.py  (+5 more)
Python/Doc/: Makefile
Python/lgmpy/: Closed_Field.py  Lgm_CTrans.py  Lgm_Dungey.py  Lgm_MagEphemInfo.py  Lgm_MagModelInfo.py  Lgm_OP77.py  Lgm_QinDenton.py  Lgm_T89.py  Lgm_T89c.py  Lgm_TS04.py  Lgm_Time.py  Lgm_TraceToEarth.py  Lgm_Vector.py  Lgm_Wrap.py  Lstar.py  MagData.py  _Bfield_dict.py  __init__.py  magcoords.py  test_Bfield_dict.py  test_Closed_Field.py  test_IsoTimeStringToDateTime.py  test_Lgm.py  test_Lgm_CTrans.py  test_Lgm_DateAndTime.py  test_Lgm_MagModelInfo.py  test_Lgm_OP77.py  test_Lgm_T89.py  test_Lgm_TS04.py  test_Lgm_TraceToEarth.py  test_Lgm_Utils.py  test_Lgm_Vector.py  test_Lgm_Wrap.py  test_Lstar.py  test_magcoords.py  test_quicksort.py  test_utils.py  utils.py
Python/patches/: ctypesgen_override  series
Python/scripts/: LstarVersusPA.py  SimpleTracing.py  TimeLstar.py  TimeLstar_OP77_vs_T89.py  lgm_T89_verify.py  lgm_dipole_verify.py
Python/test/: test_Closed_Field.py  test_IsoTimeStringToDateTime.py  test_Lgm_CTrans.py  test_Lgm_DateAndTime.py  test_Lgm_MagModelInfo.py  test_Lgm_OP77.py  test_Lgm_T89.py  test_Lgm_TS04.py  test_Lgm_Vector.py  test_Lgm_Wrap.py  test_Lstar.py  test_magcoords.py
Tools/: LastClosedDriftShell.c  MagEphemFromSpiceKernel.c  MagEphemFromTLE.c  Makefile.am  Makefile_LCDS
libLanlGeoMag/: .Lgm_IGRF.c.swo  AlphaOfK.c  AlphaOfK.c.orig  B_FromScatteredData.c  ComputeI_FromMltMlat.c  ComputeI_FromMltMlat2.c  ComputeLstar.c  Daa_param.c  Doxyfile  DriftShell.c  DynamicMemory.h  FluxTubeVolume.c  GPR.c  GPR_v3.c  Geopack_2003.f  IntegralInvariant.c  IsoTimeStringToDateTime.c  LFromIBmM.c  Lgm_AE8_AP8.c  Lgm_AE_index.c  Lgm_AlphaOfK.c  Lgm_B_Dungey.c  Lgm_B_FromScatteredData.c  Lgm_B_internal.c  Lgm_CTrans.c  Lgm_CTrans_wrap.c  Lgm_CdipMirrorLat.c  Lgm_Cgm.c  Lgm_ComputeLstarVersusPA.c  Lgm_Coulomb.c  Lgm_DFI_RBF.c  Lgm_DateAndTime.c  Lgm_DiffCoeff_param.c  Lgm_DipEquator.c  Lgm_Eclipse.c  Lgm_ElapsedTime.c  Lgm_Ellipsoid.c  Lgm_Eop.c  Lgm_FastPowPoly.c  Lgm_FirstInvariant.c  (+110 more)
libLanlGeoMag/.deps/: B_FromScatteredData.Plo  ComputeLstar.Plo  DriftShell.Plo  IntegralInvariant.Plo  IsoTimeStringToDateTime.Plo  LFromIBmM.Plo  Lgm_AE8_AP8.Plo  Lgm_AlphaOfK.Plo  Lgm_B_internal.Plo  Lgm_CTrans.Plo  Lgm_Cgm.Plo  Lgm_DateAndTime.Plo  Lgm_Eop.Plo  Lgm_FluxToPsd.Plo  Lgm_IGRF.Plo  Lgm_InitMagEphemInfo.Plo  Lgm_InitMagInfo.Plo  Lgm_MaxwellJuttner.Plo  Lgm_Nutation.Plo  Lgm_Octree.Plo  Lgm_QuadPack.Plo  Lgm_QuadPack3.Plo  Lgm_Quat.Plo  Lgm_Sgp.Plo  Lgm_SimplifiedMead.Plo  Lgm_SunPosition.Plo  Lgm_Trace.Plo  Lgm_TraceToEarth.Plo  Lgm_TraceToSphericalEarth.Plo  Lgm_Vec.Plo  MagStep.Plo  OP77.Plo  OlsenPfitzerStatic.Plo  SbIntegral.Plo  T01S.Plo  T87.Plo  T89.Plo  TS04.Plo  TraceLine.Plo  TraceToMinBSurf.Plo  (+9 more)
libLanlGeoMag/EopData/: GetEopFiles  GetEopFiles.in  Makefile.am  eopc04.62-now  eopc04_IAU2000.62-now  finals.all  finals.daily  finals2000A.all  finals2000A.daily
libLanlGeoMag/Lgm/: GPR.h  Lgm_AE8_AP8.h  Lgm_AE_index.h  Lgm_CTrans.h  Lgm_Constants.h  Lgm_Coulomb.h  Lgm_DFI_RBF.h  Lgm_DynamicMemory.h  Lgm_ElapsedTime.h  Lgm_Eop.h  Lgm_FastPowPoly.h  Lgm_FieldIntInfo.h  Lgm_FluxToPsd.h  Lgm_HDF5.h  Lgm_IGRF.h  Lgm_JPLeph.h  Lgm_JsonHeader.h  Lgm_KdTree.h  Lgm_LeapSeconds.h  Lgm_LstarInfo.h  Lgm_MagEphemInfo.h  Lgm_MagModelInfo.h  Lgm_MaxwellJuttner.h  Lgm_Metadata.h  Lgm_Misc.h  Lgm_NrlMsise00.h  Lgm_NrlMsise00_Data.h  Lgm_Objects.h  Lgm_Octree.h  Lgm_PhaseSpaceDensity.h  Lgm_PolyRoots.h  Lgm_PriorityQueue.h  Lgm_QinDenton.h  Lgm_QuadPack.h  Lgm_Quat.h  Lgm_RBF.h  Lgm_Sgp.h  Lgm_SphHarm.h  Lgm_SummersDiffCoeff.h  Lgm_TA2016.h  (+14 more)
libLanlGeoMag/QinDenton/: FmtQD.py  foo
libLanlGeoMag/Stars/: Stars.txt
libLanlGeoMag/TA_DATA/: TA16_RBF.par
libLanlGeoMag/Utils/: ConvertCoeffs.c  fmt_igrf.c
tests/: Makefile  Makefile.am  Makefile.in  PolyRootsTest.c  check_ClosedField.c  check_ClosedField_01.expected  check_CoordDipoleTilt.expected  check_CoordTrans.c  check_CoordTrans.expected  check_CoordTransNoEph.expected  check_DE421.c  check_FluxTubeVolume.c  check_FluxTubeVolume_01.expected  check_IsoTimeStringToDateTime.c  check_Lstar.c  check_Lstar.expected  check_Magmodels.c  check_Magmodels_01.expected  check_Magmodels_02.expected  check_McIlwain_L.c  check_McIlwain_L.expected  check_McIlwain_L_01.expected  check_McIlwain_L_02.expected  check_McIlwain_L_03.expected  check_McIlwain_L_04.expected  check_McIlwain_L_05.expected  check_McIlwain_L_06.expected  check_McIlwain_L_07.expected  check_McIlwain_L_08.expected  check_ParseTimeStr.c  check_PolyRoots.c  check_PolyRoots_01.expected  check_PolyRoots_02.expected  check_PolyRoots_03.expected  check_PolyRoots_04.expected  check_Sgp4.c  check_Sgp4_01.expected  check_Tsyganenko.c  check_Tsyganenko.expected  check_libLanlGeoMag.c  (+1 more)
tests/.deps/: check_libLanlGeoMag-check_libLanlGeoMag.Po  (+1 more)
(+28319 files in other folders)
